<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="team_name" type="id" />
    <item name="team_badge" type="id" />
    <item name="list_team" type="id"/>
    <item name="league_spinner" type="id"/>
</resources>