...
                android:id="@+id/team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                tools:text="Barcelona"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/team_badge"
                app:layout_constraintStart_toStartOf="@+id/team_badge"
                app:layout_constraintTop_toBottomOf="@+id/team_badge" />

            <TextView
...
